// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconButton /> prop: edge should render the correct size 1`] = `
<div
  class="css-cursor-18t94o4 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-height-mabqd8 r-justifyContent-1777fci r-outlineWidth-10paoce r-overflow-1udh08x r-touchAction-1otgn73 r-transition-imt7jj r-userSelect-lrvibr r-width-1yvhtrz"
  data-class="IconButton-root ButtonBase-root"
  role="button"
  tabindex="0"
>
  <svg
    class="r-flexShrink-1q142lx r-height-1472mwg r-width-lrsllp"
    color="currentColor"
    data-class="Icon-root"
    fill="currentColor"
  />
  <span
    class="r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-hddpjs r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(255, 251, 254); opacity: 0;"
  />
  <span
    data-class="ButtonBase-rippleContainer"
  />
</div>
`;

exports[`<IconButton /> prop: edge should render the correct size 2`] = `
<div
  class="css-cursor-18t94o4 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-height-eu3ka r-justifyContent-1777fci r-outlineWidth-10paoce r-overflow-1udh08x r-touchAction-1otgn73 r-transition-imt7jj r-userSelect-lrvibr r-width-1aockid"
  data-class="IconButton-root ButtonBase-root"
  role="button"
  tabindex="0"
>
  <svg
    class="r-flexShrink-1q142lx r-height-1472mwg r-width-lrsllp"
    color="currentColor"
    data-class="Icon-root"
    fill="currentColor"
  />
  <span
    class="r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-hddpjs r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(255, 251, 254); opacity: 0;"
  />
  <span
    data-class="ButtonBase-rippleContainer"
  />
</div>
`;

exports[`<IconButton /> prop: edge should render the correct size 3`] = `
<div
  class="css-cursor-18t94o4 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-height-h3s6tt r-justifyContent-1777fci r-outlineWidth-10paoce r-overflow-1udh08x r-touchAction-1otgn73 r-transition-imt7jj r-userSelect-lrvibr r-width-rwqe4o"
  data-class="IconButton-root ButtonBase-root"
  role="button"
  tabindex="0"
>
  <svg
    class="r-flexShrink-1q142lx r-height-1472mwg r-width-lrsllp"
    color="currentColor"
    data-class="Icon-root"
    fill="currentColor"
  />
  <span
    class="r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-hddpjs r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(255, 251, 254); opacity: 0;"
  />
  <span
    data-class="ButtonBase-rippleContainer"
  />
</div>
`;

exports[`<IconButton /> should render 1`] = `
<div
  class="css-cursor-18t94o4 css-view-1dbjc4n r-alignItems-1awozwy r-cursor-1loqt21 r-height-eu3ka r-justifyContent-1777fci r-outlineWidth-10paoce r-overflow-1udh08x r-touchAction-1otgn73 r-transition-imt7jj r-userSelect-lrvibr r-width-1aockid"
  data-class="IconButton-root ButtonBase-root"
  role="button"
  tabindex="0"
>
  <svg
    class="r-flexShrink-1q142lx r-height-1472mwg r-width-lrsllp"
    color="currentColor"
    data-class="Icon-root"
    data-testid="icon"
    fill="currentColor"
  />
  <span
    class="r-bottom-1p0dtai r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-transition-hddpjs r-zIndex-1wyyakw"
    data-class="ButtonBase-hover"
    style="background-color: rgb(255, 251, 254); opacity: 0;"
  />
  <span
    data-class="ButtonBase-rippleContainer"
  />
</div>
`;
